[package]
name = "margo"
version = "0.1.6"
edition = "2021"
rust-version = "1.81.0"

license = "MIT OR Apache-2.0"

description = "Manage a static Cargo registry"
repository = "https://github.com/integer32llc/static-registry"

[features]
default = ["html"]

html = ["dep:handlebars", "dep:comrak"]

[workspace]
members = [
    "conformance",
    "xtask",
]

[workspace.lints.rust]
rust_2018_idioms = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # Remove after 1.80. https://github.com/rust-lang/rust-clippy/issues/12270

[workspace.dependencies]
argh = { version = "0.1.13", default-features = false }
registry-conformance = { version = "0.5.3", registry = "registry-conformance" }
snafu = { version = "0.8.2", default-features = false, features = ["rust_1_65", "std"] }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "process", "rt-multi-thread"] }

[lints]
workspace = true

[dependencies]
argh.workspace = true
argh.features = ["help"]
cargo-util-schemas = "0.8.2"
colored = "3.0.0"
comrak = { version = "0.40", optional = true, features = ["shortcodes"] }
dialoguer = { version = "0.11.0", default-features = false }
enum-iterator = "2.1.0"
flate2 = { version = "1.0.28", default-features = false, features = ["rust_backend"] }
handlebars = { version = "6.3.2", optional = true }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
lazy_static = "1.5.0"
rayon = "1.10"
semver = { version = "1.0.23", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.197", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.115", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false }
tar = { version = "0.4.40", default-features = false }
toml = { version = "0.8.12", default-features = false, features = ["parse", "display"] }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
walkdir = { version = "2.5.0", default-features = false }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
registry-conformance.workspace = true
tokio.workspace = true
assert_fs = "1.1"
predicates = "3.1"