[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
argh.workspace = true
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
quote = { version = "1.0.36", default-features = false }
regex = { version = "1.10.4", default-features = false, features = ["std"] }
snafu.workspace = true
